@startuml

class "ListAccountUI"{
}
class "ListAccountController" {
-Company
+ListAllAccount()
}
class "Company"{
-AccountContainer
getAccountContainer()
}
class "AccountContainer"{
-AccountList
getCopyAccountList()
}
class "Account"{}

hide "ListAccountUI" circle
hide "ListAccountController" circle
hide "Company" circle
hide "AccountContainer" circle
hide "Account" circle


"ListAccountUI" ..> "ListAccountController"
"ListAccountController" ..> "Company"
"Company"->"AccountContainer"
"ListAccountController"---> "AccountContainer"
"AccountContainer"-->"Account"
@enduml